--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,11 +61,12 @@
   <ItemGroup>
     <Compile Include="Assets\Script\CameraController.cs" />
     <Compile Include="Assets\Script\PlayerControl.cs" />
-    <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>D:/娱乐/ball rolling game/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
-    </Reference>
+    <Compile Include="Assets\Script\Rotator.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>D:/娱乐/ball rolling game/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.PackageManagerUI.Editor">
+      <HintPath>D:/娱乐/ball rolling game/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>D:/unity/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
